--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.4.1
 Deprecated==1.2.13
 Django==3.2.6
+django-filter==2.4.0
 django-ranged-response==0.2.0
 django-redis==5.2.0
 django-simple-captcha==0.5.14
 djangorestframework==3.13.1
+djangorestframework-csv==2.1.1
 djangorestframework-simplejwt==4.4.0
 importlib-metadata==4.8.3
 packaging==21.3
@@ -17,5 +19,8 @@ redis==4.1.1
 six==1.16.0
 sqlparse==0.4.2
 typing_extensions==4.0.1
+unicodecsv==0.14.1
 wrapt==1.13.3
+xlrd==2.0.1
+xlwt==1.3.0
 zipp==3.6.0
