--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,11 +15,14 @@ PyJWT==2.3.0
 PyMySQL==1.0.2
 pyparsing==3.0.6
 pytz==2021.3
+PyYAML==6.0
 redis==4.1.1
 six==1.16.0
 sqlparse==0.4.2
 typing_extensions==4.0.1
+ua-parser==0.10.0
 unicodecsv==0.14.1
+user-agents==2.2.0
 wrapt==1.13.3
 xlrd==2.0.1
 xlwt==1.3.0
